chore: fix lint-staged glob patterns in package.json

--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "typescript": "^5"
   },
   "lint-staged": {
-    "{ts,tsx,js}": "eslint --fix",
-    "{ts,tsx,js,css,scss,md,json,yml,yaml}": "prettier --write"
+    "*.{ts,tsx,js}": "eslint --fix",
+    "*.{ts,tsx,js,css,scss,md,json,yml,yaml}": "prettier --write"
   }
 }
