--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "packageManager": "pnpm@9.0.0",
   "scripts": {
+    "build:remotes": "./scripts/build-all-remotes.sh",
     "build": "pnpm -C apps/host build",
     "dev": "pnpm -C apps/host dev",
     "format:check": "prettier --check .",
