--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
     "prepare": "husky",
     "test:e2e": "echo 'todo: playwright' && exit 0",
     "test:unit": "echo 'todo: vitest' && exit 0",
-    "typecheck": "tsc -p tsconfig.base.json --noEmit"
+    "typecheck": "tsc -p tsconfig.base.json --noEmit",
+    "bugsnag:upload": "node scripts/upload-bugsnag-sourcemaps.mjs"
+  },
+  "dependencies": {
+    "@bugsnag/js": "^8.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9",
@@ -42,7 +46,8 @@
     "sass": "^1.77.0",
     "typescript": "^5.9.2",
     "typescript-eslint": "^8",
-    "vite": "^5.4.0"
+    "vite": "^5.4.0",
+    "bugsnag-source-maps": "^2.3.0"
   },
   "lint-staged": {
     "*.{ts,tsx,js}": "eslint --fix",
