--- a/apps/bar-manager/tsconfig.json
+++ b/apps/bar-manager/tsconfig.json
@@ -1,4 +1,4 @@
 {
   "extends": "../../tsconfig.base.json",
-  "include": ["src", "locales"]
+  "include": ["src", "locales", "vite.remote.config.ts"]
 }
