--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "ralphstudio",
+  "version": "1.0.0",
   "private": true,
   "engines": {
     "node": "^22.0.0 || ^20.10.0",
@@ -22,32 +23,32 @@
     "bugsnag:upload": "node scripts/upload-bugsnag-sourcemaps.mjs"
   },
   "dependencies": {
-    "@bugsnag/js": "^8.0.0"
+    "@bugsnag/js": "8.4.0"
   },
   "devDependencies": {
-    "@eslint/js": "^9",
-    "@typescript-eslint/eslint-plugin": "^8.39.1",
-    "@typescript-eslint/parser": "^8.39.1",
-    "eslint": "^9.33.0",
-    "eslint-config-prettier": "^10.1.8",
-    "eslint-import-resolver-typescript": "^4.4.4",
-    "eslint-plugin-import": "^2.32.0",
-    "eslint-plugin-lit": "^2.1.1",
+    "@bugsnag/source-maps": "2.3.3",
+    "@eslint/js": "9.33.0",
+    "@typescript-eslint/eslint-plugin": "8.39.1",
+    "@typescript-eslint/parser": "8.39.1",
+    "eslint-config-prettier": "10.1.8",
+    "eslint-import-resolver-typescript": "4.4.4",
+    "eslint-plugin-import": "2.32.0",
     "eslint-plugin-lit-a11y": "5.1.1",
-    "eslint-plugin-playwright": "^2.2.2",
+    "eslint-plugin-lit": "2.1.1",
+    "eslint-plugin-playwright": "2.2.2",
     "eslint-plugin-promise": "7.2.1",
     "eslint-plugin-simple-import-sort": "12.1.1",
     "eslint-plugin-unicorn": "60.0.0",
-    "eslint-plugin-vitest": "^0.5.4",
-    "eslint-plugin-wc": "^3.0.1",
-    "husky": "^9.1.7",
-    "lint-staged": "^16.1.5",
-    "prettier": "^3.6.2",
-    "sass": "^1.77.0",
-    "typescript": "^5.9.2",
-    "typescript-eslint": "^8",
-    "vite": "^5.4.0",
-    "bugsnag-source-maps": "^2.3.0"
+    "eslint-plugin-vitest": "0.5.4",
+    "eslint-plugin-wc": "3.0.1",
+    "eslint": "9.33.0",
+    "husky": "9.1.7",
+    "lint-staged": "16.1.5",
+    "prettier": "3.6.2",
+    "sass": "1.90.0",
+    "typescript-eslint": "8.39.1",
+    "typescript": "5.9.2",
+    "vite": "5.4.19"
   },
   "lint-staged": {
     "*.{ts,tsx,js}": "eslint --fix",
